--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
+    "google-auth-library": "^9.15.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "socket.io": "^4.8.1"
   }
 }
