--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase-admin": "^13.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.15.1",
     "helmet": "^8.0.0",
@@ -23,6 +24,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "sharp": "^0.34.0",
     "socket.io": "^4.8.1"
   }
 }
