--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "file-type": "^20.4.1",
     "firebase-admin": "^13.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.15.1",
