--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.15.1",
     "helmet": "^8.0.0",
+    "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
