--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^8.0.0",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
